# opal

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
docs/: input.md
examples/: colliding_beams.yaml  hole_boring.yaml  two_stream.yaml
src/: constants.rs  main.rs  setup.rs
src/grid/: mod.rs  yee.rs
src/particle/: electron.rs  hgram.rs  interactions.rs  ion.rs  mod.rs  photon.rs  vec3.rs
src/qed/: mod.rs  photon_absorption.rs  photon_emission.rs  photon_emission_tables.rs  pwmci.rs  stimulated_emission.rs
src/qed/special_functions/: airy.rs  mod.rs
