[package]
name = "opal"
version = "0.1.0"
authors = ["blackburn"]
edition = "2018"

[dependencies]
mpi = "0.5"
memoffset = "0.5"
ndarray = {version = "0.13.0", features = ["rayon"]}
rand = "0.7"
#rand_chacha = "0.2"
rand_xoshiro = "0.4"
rand_distr = "0.2"
fitsio = "0.15"
rayon = "1.2.0"
indicatif = "0.11.0"
rustversion = "0.1"
num-traits = "0.2"
meval = "0.2.0"
#meval = {version = "0.2.0", git = "https://github.com/sjeohp/meval-rs"}
yaml-rust = "0.4"
num = "0.2"

[features]
no_radiation_reaction = [] # disable recoil, use classical emission rate
