[package]
name = "opal"
version = "1.3.0"
authors = ["tgblackburn"]
edition = "2018"
publish = false
readme = "README.md"
license = "MIT"

[dependencies]
mpi = "0.5"
memoffset = "0.5"
ndarray = {version = "0.13.0", features = ["rayon"]}
rand = "0.7"
rand_xoshiro = "0.4"
rand_distr = "0.2"
fitsio = "0.15"
rayon = "1.2.0"
rustversion = "0.1"
meval = "0.2.0"
yaml-rust = "0.4"
num = "0.2"

[features]
default = []
no_radiation_reaction = [] # disable recoil, use classical emission rate
no_beaming = [] # photons emitted parallel to electron momentum
extra_absorption_output = [] # write data about absorbed photons to stderr
